fixes overflow on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,6 @@ body {
   font-family: "Urbanist", sans-serif;
 }
 
-/* Apply background colors to the body based on theme */
 body.light {
   background-color: #f5f5f7;
   color: #86a8e7;
@@ -69,4 +68,11 @@ h5 {
   font-weight: 600;
   letter-spacing: 1.5;
   color: rgb(167, 77, 152);
+}
+
+@media only screen and (max-width: 600px) {
+  html,
+  body {
+    overflow-x: hidden;
+  }
 }
